--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/core": "5.7.4",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
+    "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
