--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     },
     "description": "Backend for gpsMocker to access adb from shell",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.19.2"
     },
     "type": "module"
